- Remove unnecessary spacing (padding and margin) from all sections & section headings - Lower the position of social media icons when the hamburger icon is clicked - Use overflow-x on the html element to stop the page from sliding left/right on mobile devices - some minor cleanup

--- a/css/application.css
+++ b/css/application.css
@@ -193,6 +193,8 @@ section {
   background-color: black;
 }
 section#about-me {
+  margin-top: -1rem;
+  padding: 0;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -206,6 +208,9 @@ section#about-me h2 {
   font-family: "Madimi One", sans-serif;
   font-weight: 400;
   font-size: 2.5rem;
+}
+section#about-me h2 {
+  padding-top: 2rem;
 }
 section#about-me article.about-me {
   flex: 1;
@@ -452,6 +457,7 @@ section#code-examples h2 {
 section#code-examples h2 {
   margin-top: 1rem;
   margin-bottom: 5rem;
+  padding: 0;
 }
 section#code-examples div#code-examples-main-container {
   display: flex;
@@ -530,6 +536,8 @@ section#scion-coalition-scheme {
   display: flex;
   flex-direction: column;
   height: 100vh;
+  margin: 0 auto;
+  padding-top: 0;
 }
 section#scion-coalition-scheme h2 {
   display: block;
